
0.37    8 Dec 2008
        * support x-tunneled-method for DELETE in save() calls

0.38    12 Jan 2009
        * use maybe::next::method
        * fix view_on_single_result bug in Test::Controller

0.39    14 Jan 2009
        * add missing file to MANIFEST that causes tests to fail in 0.38

0.40    16 April 2009
        * change base Controller to call can_read() rather than can_write() in edit().
          This is because the call to edit() does not actually write anything; it's just a GET
          for a form.

0.41    21 April 2009
        * remove Catalyst::Component::ACCEPT_CONTEXT as a dependency since it has not been
          updated for Catalyst 5.8.

0.42    27 April 2009
        * revert ACCEPT_CONTEXT changes; fixes pushed to new C::C::A_C on CPAN, and added no warnings
          using Class::C3::Adopt::NEXT (thanks to t0m)
        * change from 'use Class::C3' to 'use mro "c3"' with new dep on MRO::Compat
        * added some debugging in tests
        
0.43    29 April 2009
        * rid of ourselves of Class::Data::Inheritable because it clashes with Catalyst::Runtime 5.8.
          Notably, it caused a strange bug in Rose::DBx::Garden::Catalyst where the MyApp->config
          class hashref would get nuked after a call to Class::C3::initialize(). Yes. That fsked up.

0.44    23 May 2009
        * check for symlink() support in Model::File at compile time and return from rm_related()
          if not supported. Fixes spurious test breakage on Win32.
          See https://rt.cpan.org/Ticket/Display.html?id=46314

0.45    13 June 2009
        * fix multi-column sort via cxc-order param (requires Sort::SQL 0.04)

0.46    20 Nov 2009
        * tweek Model::File _find to avoid multiple loops over the same list of root dirs.
        * tweek Model::File->search to read() each object like fetch() does.
        * add dep on Sort::SQL 0.07 to avoid sql injection (RT#51777)

        
0.47    xxx
        * fix tutorial per RT#53396
 