@@ -1,0 +1,16 @@
+use strict;
+use warnings;
+use Test::More tests => 2;
+use lib qw( lib t/lib );
+use Catalyst::Test 'MyApp';
+use Data::Dump qw( dump );
+use HTTP::Request::Common;
+
+my $res;
+ok( $res = request(
+        HTTP::Request->new( GET => '/fileadaptermultipk/testfile;;/read' )
+    ),
+    "GET new file with null pk"
+);
+
+is( $res->headers->{status}, 500, "exception thrown" );
